fixed alignment of cart

--- a/sass/components/_cart.scss
+++ b/sass/components/_cart.scss
@@ -13,13 +13,31 @@
     animation-duration: 1.2s;
 
     .items {
-      max-height: 100vh;
+      max-height: calc(100vh - 30%);
       overflow-y: auto;
       .item {
         display: flex;
         justify-content: space-between;
         margin: 10px;
-        border: 1px solid #777;
+        box-shadow: 0px 0px 1px #777;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+
+        .description {
+          margin: 0 10px;
+          max-height: 100px;
+          overflow: hidden;
+
+          .name {
+            white-space: normal;
+            // overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 80%;
+          }
+        }
       }
     }
   }
